# MUI-2.X

./: .gitignore  CMakeLists.txt  bin.h  lib_mpi_multidomain.h  spatial_storage.h  uniface.h  util.h
cuda/: CMakeLists.txt  mui_cuda.cpp  mui_cuda.h
cuda/spatial_samplers/: sampler_gauss.cu
src/general/: domain_hash.h  hash_map.h
src/linear_algebra/: matrix.h  matrix_arithmetic.h  matrix_ctor_dtor.h  matrix_io_info.h  matrix_manipulation.h  preconditioner.h  preconditioner_diagonal.h  solver.h  solver_cg.h
src/samplers/spatial/: sampler_rbf.h
